fix: align 'mint' new nft button

--- a/src/containers/PageContainer/elements/Header/elements/MintButton/_mint-button.scss
+++ b/src/containers/PageContainer/elements/Header/elements/MintButton/_mint-button.scss
@@ -1,3 +1,4 @@
 .mint-button {
 	padding: 0px 1rem;
+	margin-top: 4px;
 }
